[gd_scene load_steps=5 format=3 uid="uid://dgfam4swo5kr7"]

[ext_resource type="Script" uid="uid://bru06qw6ogpqh" path="res://scenes/game_matching/matching_card.gd" id="1_05pd5"]
[ext_resource type="Texture2D" uid="uid://ds56xnygj8h8k" path="res://resources/images/game_matching/sprite_matching_empty_card.png" id="2_5exu2"]
[ext_resource type="Texture2D" uid="uid://cvjd0f8axaon7" path="res://resources/images/game_matching/sprite_matching_eye_1.png" id="3_5y5go"]
[ext_resource type="Texture2D" uid="uid://cimd21j7s3k8i" path="res://resources/images/game_matching/sprite_matching_eye_2.png" id="4_olsd0"]

[node name="MatchingCard" type="TextureRect"]
mouse_filter = 2
script = ExtResource("1_05pd5")

[node name="Card" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_5exu2")

[node name="Eye1" type="TextureRect" parent="Card"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("3_5y5go")

[node name="Eye2" type="TextureRect" parent="Card"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 256.0
mouse_filter = 2
texture = ExtResource("4_olsd0")
